nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_a_bound_on_a_generic_needs_no_vtable.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type Dog = struct {           // was a struct; size 4, align 4
  n: i32                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func call(d_0: *Dog) -> i32  // _NC4call
  let _1: i32
bb0:                    // entry
  _1 := call heard.<Dog>(d_0)
    @safepoint { live: [d_0]
      d_0 := reloc d_0
    }
  return _1

func Dog.<as Speak>.say(self_0: *Dog) -> i32  // _NC3DogXN5SpeakIE3say
bb0:                    // entry
  return self_0.*.n

func heard.<Dog>(t_0: *Dog) -> i32  // _NC5heardIN3DogIEE
  let _1: i32
bb0:                    // entry
  _1 := call Dog.<as Speak>.say(t_0)
    @safepoint { live: [t_0]
      t_0 := reloc t_0
    }
  return _1
