nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_a_bounds_check_is_a_comparison_and_an_edge.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type []i32 = struct {           // was a slice; size 16, align 8
  ptr: *i32                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}

func get(s_0: []i32, k_1: usize) -> i32  // _NC3get
  let _2: *[]i32
  let _3: bool
  let _4: never
  let _5: *i32
bb0:                    // entry
  _2 := &s_0
  _3 := k_1 < _2.*.len
  switch _3 { 1 => bb2, _ => bb1 }
bb1:                    // out of bounds
  _4 := $panic("index out of bounds")
  unreachable
bb2:
  _5 := _2.*.ptr + k_1 * stride(i32)
  return _5.*
