nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_a_decision_tree_mixes_tuples_ranges_and_guards.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type (i32, bool) = struct {           // was a tuple; size 8, align 4
  0: i32                    // +0
  1: bool                    // +4
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func pair(t_0: (i32, bool)) -> i32  // _NC4pair
  let _1: i32
  let _2: bool
  let _3: bool
  let n_4: i32
  let _5: bool
bb0:                    // entry
  _2 := t_0.0 == 0
  switch _2 { 1 => bb7, _ => bb6 }
bb1:                    // join
  return _1
bb2:                    // arm pattern
  _1 := 1
  goto bb1
bb3:                    // arm pattern
  _1 := 2
  goto bb1
bb4:                    // arm _
  _1 := 0
  goto bb1
bb5:                    // unreachable
  unreachable
bb6:
  n_4 := t_0.0
  _5 := n_4 > 10
  switch _5 { 1 => bb10, _ => bb9 }
bb7:
  _3 := t_0.1 == true
  switch _3 { 1 => bb8, _ => bb6 }
bb8:
  goto bb2
bb9:
  goto bb4
bb10:
  goto bb3

func grade(n_0: u8) -> i32  // _NC5grade
  let _1: i32
  let _2: bool
  let _3: bool
  let _4: bool
  let _5: bool
  let _6: bool
  let _7: bool
bb0:                    // entry
  _2 := n_0 >= 0
  switch _2 { 1 => bb8, _ => bb7 }
bb1:                    // join
  return _1
bb2:                    // arm pattern
  _1 := 1
  goto bb1
bb3:                    // arm pattern
  _1 := 2
  goto bb1
bb4:                    // arm pattern
  _1 := 3
  goto bb1
bb5:                    // arm _
  _1 := 0
  goto bb1
bb6:                    // unreachable
  unreachable
bb7:
  _4 := n_0 >= 10
  switch _4 { 1 => bb11, _ => bb10 }
bb8:
  _3 := n_0 < 10
  switch _3 { 1 => bb9, _ => bb7 }
bb9:
  goto bb2
bb10:
  goto bb15
bb11:
  _5 := n_0 <= 200
  switch _5 { 1 => bb12, _ => bb10 }
bb12:
  goto bb3
bb13:
  goto bb5
bb14:
  goto bb4
bb15:
  _6 := n_0 == 201
  switch _6 { 1 => bb17, _ => bb16 }
bb16:
  _7 := n_0 == 202
  switch _7 { 1 => bb18, _ => bb13 }
bb17:
  goto bb14
bb18:
  goto bb14
