nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_a_diverging_call_ends_the_block.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}

func checked(n_0: i32) -> i32  // _NC7checked
  let _1: bool
  let _2: core.Location
bb0:                    // entry
  _1 := n_0 < 0
  switch _1 { 1 => bb1, _ => bb2 }
bb1:                    // then
  _2 := Location("mem:main", 2, 14)
  call core.panic("negative", _2)
    @safepoint { live: [_2]
      _2 := reloc _2
    }
  unreachable
bb2:                    // else
  goto bb3
bb3:                    // join
  return n_0
