nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_a_loop_body_has_a_rung_for_each_kind_of_exit.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type (i32, bool) = struct {           // was a tuple; size 8, align 4
  0: i32                    // +0
  1: bool                    // +4
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func cleanup() -> void  // _NC7cleanup
bb0:                    // entry
  return

func scan(n_0: i32) -> i32  // _NC4scan
  let _1: i32
  let i_2: i32
  let _3: bool
  let _4: bool
  let _5: (i32, bool)
  let _6: core.Location
  let _7: bool
  let _8: bool
  let _9: bool
  let _10: i32
bb0:                    // entry
  _1 := 0
  i_2 := _1
  goto bb1
bb1:                    // loop
  _3 := i_2 < n_0
  _4 := !_3
  switch _4 { 1 => bb3, _ => bb4 }
bb2:                    // loop exit
  return i_2
bb3:                    // then
  goto bb6
bb4:                    // else
  goto bb5
bb5:                    // join
  _5 := checked_add(i_2, 1)
  switch _5.overflowed { 1 => bb7, _ => bb8 }
bb6:                    // cleanup 1 (break)
  call cleanup()
    @safepoint { live: [] }
  goto bb2
bb7:                    // overflow
  _6 := Location("mem:main", 6, 9)
  call core.panic("integer overflow", _6)
    @safepoint { live: [_6]
      _6 := reloc _6
    }
  unreachable
bb8:
  i_2 := _5.0
  _7 := i_2 == 2
  switch _7 { 1 => bb9, _ => bb10 }
bb9:                    // then
  goto bb12
bb10:                    // else
  goto bb11
bb11:                    // join
  _8 := i_2 == 3
  switch _8 { 1 => bb13, _ => bb14 }
bb12:                    // cleanup 1 (continue)
  call cleanup()
    @safepoint { live: [] }
  goto bb1
    @safepoint { live: [] }
bb13:                    // then
  goto bb6
bb14:                    // else
  goto bb15
bb15:                    // join
  _9 := i_2 == 4
  switch _9 { 1 => bb16, _ => bb17 }
bb16:                    // then
  _10 := 4
  goto bb20
bb17:                    // else
  goto bb18
bb18:                    // join
  call cleanup()
    @safepoint { live: [] }
  goto bb1
    @safepoint { live: [] }
bb19:                    // return
  return _10
bb20:                    // cleanup 1 (return)
  call cleanup()
    @safepoint { live: [] }
  goto bb19
