nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_a_static_is_a_place_and_a_constant_is_a_value.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type (u32, bool) = struct {           // was a tuple; size 8, align 4
  0: u32                    // +0
  1: bool                    // +4
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}
global counter: u32 = 0

func bump() -> u32  // _NC4bump
  let _0: (u32, bool)
  let _1: core.Location
bb0:                    // entry
  _0 := checked_add(@counter, 1)
  switch _0.overflowed { 1 => bb1, _ => bb2 }
bb1:                    // overflow
  _1 := Location("mem:main", 4, 13)
  call core.panic("integer overflow", _1)
    @safepoint { live: [_1]
      _1 := reloc _1
    }
  unreachable
bb2:
  @counter = _0.0
  return @counter

func at_limit(n_0: i32) -> bool  // _NC8at_limit
  let _1: bool
bb0:                    // entry
  _1 := n_0 == 10
  return _1
