nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_a_text_pattern_calls_bytes_eq.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type (i32, bool) = struct {           // was a tuple; size 8, align 4
  0: i32                    // +0
  1: bool                    // +4
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func kind(s_0: core.str) -> i32  // _NC4kind
  let _1: i32
  let _2: bool
  let _3: bool
  let _4: (i32, bool)
  let _5: core.Location
bb0:                    // entry
  _2 := call core.bytes_eq(s_0.0, b"yes")
    @safepoint { live: [s_0]
      s_0 := reloc s_0
    }
  switch _2 { 1 => bb7, _ => bb6 }
bb1:                    // join
  return _1
bb2:                    // arm "yes"
  _1 := 1
  goto bb1
bb3:                    // arm "no"
  _1 := 0
  goto bb1
bb4:                    // arm _
  _4 := checked_neg(1)
  switch _4.overflowed { 1 => bb10, _ => bb11 }
bb5:                    // unreachable
  unreachable
bb6:
  _3 := call core.bytes_eq(s_0.0, b"no")
    @safepoint { live: [s_0]
      s_0 := reloc s_0
    }
  switch _3 { 1 => bb9, _ => bb8 }
bb7:
  goto bb2
bb8:
  goto bb4
bb9:
  goto bb3
bb10:                    // overflow
  _5 := Location("mem:main", 5, 10)
  call core.panic("integer overflow", _5)
    @safepoint { live: [_5]
      _5 := reloc _5
    }
  unreachable
bb11:
  _1 := _4.0
  goto bb1

func same(a_0: core.str, b_1: core.str) -> bool  // _NC4same
  let _2: bool
bb0:                    // entry
  _2 := call core.<impl str>.<as core.Eq>.eq(a_0, b_1)
    @safepoint { live: [a_0, b_1]
      a_0 := reloc a_0
      b_1 := reloc b_1
    }
  return _2
