nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_a_written_drop_is_the_compilers_own_instruction.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type Node = struct {           // was a struct; size 4, align 4
  x: i32                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func report(n_0: i32) -> void  // _NC6report
bb0:                    // entry
  return

func f() -> i32  // _NC1f
  let _0: *mut Node
  let _1: *mut Node
  let kept_2: *mut Node
  let _3: *mut Node
  let _4: *mut Node
  let freed_5: *mut Node
  let _6: i32
bb0:                    // entry
  _0 := $new()
    @safepoint { live: [] }
  _1 := _0
  kept_2 := _1
  _3 := $new()
    @safepoint { live: [kept_2]
      kept_2 := reloc kept_2
    }
  _4 := _3
  freed_5 := _4
  call report(freed_5.*.x)
    @safepoint { live: [kept_2, freed_5]
      kept_2 := reloc kept_2
      freed_5 := reloc freed_5
    }
  drop freed_5
  _6 := kept_2.*.x
  goto bb2
bb1:                    // return
  return _6
bb2:                    // cleanup 0 (return)
  drop kept_2
  goto bb1
