nestc/src/sema/snapshots/nestc__sema__tests__lir_snapshot_aggregates_are_flattened_to_structs.snap
---
source: src/sema/tests.rs
expression: lir_text(src)
---
type Pair = struct {           // was a struct; size 8, align 4
  a: u8                    // +0
  b: u32                    // +4
}
type Tag = struct {           // was a enum; size 12, align 4
  tag: u8                    // +0
  payload: [8]u8                    // +4
}
  // tag 0 => .none
  // tag 1 => .one(0: u8 +0)
  // tag 2 => .two(0: u32 +0, 1: u8 +4)
type []i32 = struct {           // was a slice; size 16, align 8
  ptr: *i32                    // +0
  len: u64                    // +8
}
type (i32, bool) = struct {           // was a tuple; size 8, align 4
  0: i32                    // +0
  1: bool                    // +4
}
type Meters = struct {           // was a distinct; size 8, align 8
  0: f64                    // +0
}
type []u8 = struct {           // was a slice; size 16, align 8
  ptr: *u8                    // +0
  len: u64                    // +8
}
type usize = struct {           // was a distinct; size 8, align 8
  0: u64                    // +0
}
type core.Location = struct {           // was a struct; size 24, align 8
  file: core.str                    // +0
  line: u32                    // +16
  column: u32                    // +20
}
type core.str = struct {           // was a distinct; size 16, align 8
  0: []u8                    // +0
}
type (usize, bool) = struct {           // was a tuple; size 16, align 8
  0: usize                    // +0
  1: bool                    // +8
}

func shapes(p_0: Pair, t_1: Tag, s_2: []i32, a_3: [3]u8, q_4: (i32, bool), m_5: Meters) -> void  // _NC6shapes
bb0:                    // entry
  return
